# docs/swagger.json
@@ -390,6 +390,9 @@
                 "downloads": {
                     "type": "integer"
                 },
+                "iconUrl": {
+                    "type": "string"
+                },
                 "id": {
                     "type": "string"
                 },
@@ -416,15 +419,6 @@
                 },
                 "stars": {
                     "type": "integer"
-                },
-                "status": {
-                    "type": "string"
-                },
-                "tags": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
                 }
             }
         }
